--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Bienvenue sur le site de XxGhostxX </h1>
+    <h1>Bienvenue sur le site de XxGhostxX</h1>
     <p>Un site web créé avec passion !</p>
   </header>
   <main>
@@ -17,7 +17,7 @@
       <ul>
         <li>Email : <a href="mailto:kami.jrka@gmail.com">kami.jrka@gmail.com</a></li>
         <li>Facebook : <a href="https://www.facebook.com/8Xx.GHOST.xX8" target="_blank">XxGhostxX</a></li>
-        <li>GitHub : <a href="https://github.com/Bxnaruto/Ksnnd-flzldbcbskkzkdkxlzndbfji-" target="_blank">Mon GitHub</a></li>
+        <li>GitHub : <a href="https://github.com/Ghostbot-69" target="_blank">Mon GitHub</a></li>
       </ul>
     </section>
   </main>
@@ -25,4 +25,4 @@
     <p>© 2025 XxGhostxX. Tous droits réservés.</p>
   </footer>
 </body>
-</html>
+  </html>
