--- a/public/index.html
+++ b/public/index.html
@@ -7,22 +7,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Bienvenue sur le site de XxGhostxX</h1>
-    <p>Un site web créé avec passion !</p>
-  </header>
-  <main>
-    <section class="hero">
-      <h2>Contactez-moi</h2>
-      <ul>
-        <li>Email : <a href="mailto:kami.jrka@gmail.com">kami.jrka@gmail.com</a></li>
-        <li>Facebook : <a href="https://www.facebook.com/8Xx.GHOST.xX8" target="_blank">XxGhostxX</a></li>
-        <li>GitHub : <a href="https://github.com/Ghostbot-69" target="_blank">Mon GitHub</a></li>
-      </ul>
-    </section>
-  </main>
-  <footer>
-    <p>© 2025 XxGhostxX. Tous droits réservés.</p>
-  </footer>
+  <div class="content">
+    <header>
+      <h1>Bienvenue sur le site de XxGhostxX</h1>
+      <p>Un site web créé avec passion !</p>
+    </header>
+    <main>
+      <section class="hero">
+        <h2>Contactez-moi</h2>
+        <ul>
+          <li>Email : <a href="mailto:kami.jrka@gmail.com">kami.jrka@gmail.com</a></li>
+          <li>Facebook : <a href="https://www.facebook.com/8Xx.GHOST.xX8" target="_blank">XxGhostxX</a></li>
+          <li>GitHub : <a href="https://github.com/Ghostbot-69" target="_blank">Mon GitHub</a></li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <p>© 2025 XxGhostxX. Tous droits réservés.</p>
+    </footer>
+  </div>
 </body>
-  </html>
+</html>
