--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon premier site - XxGhostxX</title>
+  <title>𝙈𝙤𝙣 𝙥𝙧𝙚𝙢𝙞𝙚𝙧 𝙨𝙞𝙩𝙚 - ☢️𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓☣️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="content">
-    <header>
-      <h1>Bienvenue sur le site de XxGhostxX</h1>
-      <p>Un site web créé avec passion !</p>
-    </header>
-    <main>
-      <section class="hero">
-        <h2>Contactez-moi</h2>
-        <ul>
-          <li>Email : <a href="mailto:kami.jrka@gmail.com">kami.jrka@gmail.com</a></li>
-          <li>Facebook : <a href="https://www.facebook.com/8Xx.GHOST.xX8" target="_blank">XxGhostxX</a></li>
-          <li>GitHub : <a href="https://github.com/Ghostbot-69" target="_blank">Mon GitHub</a></li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <p>© 2025 XxGhostxX. Tous droits réservés.</p>
-    </footer>
-  </div>
+  <header>
+    <h1>🏵️𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 𝙨𝙪𝙧 𝙡𝙚 𝙨𝙞𝙩𝙚 𝙙𝙚 𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓🏵️</h1>
+    <p>🌼𝙐𝙣 𝙨𝙞𝙩𝙚 𝙬𝙚𝙗 𝙘𝙧𝗲́𝗲́ 𝙖𝙫𝙚𝙘 𝙥𝙖𝙨𝙨𝙞𝙤𝙣 !🌻</p>
+  </header>
+  <main>
+    <section class="hero">
+      <h2>𝘾𝙤𝙣𝙩𝙖𝙘𝙩𝙚𝙯-𝙢𝙤𝙞 📞:</h2>
+      <div class="contact-box">
+        <a href="mailto:kami.jrka@gmail.com" class="button">Email</a>
+        <a href="https://www.facebook.com/8Xx.GHOST.xX8" class="button" target="_blank">Facebook</a>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>© 2025 🌼ᎲᎲᎶᎻᎾᏕᎿᎲᎲ🌼. 𝐓𝐨𝐮𝐬 𝐝𝐫𝐨𝐢𝐭𝐬 𝐫𝐞́𝐬𝐞𝐫𝐯𝐞́𝐬.</p>
+  </footer>
 </body>
 </html>
