--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>🏵️𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 𝙨𝙪𝙧 𝙡𝙚 𝙨𝙞𝙩𝙚 𝙙𝙚 𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓🏵️</h1>
-    <p>🌼𝙐𝙣 𝙨𝙞𝙩𝙚 𝙬𝙚𝙗 𝙘𝙧𝗲́𝗲́ 𝙖𝙫𝙚𝙘 𝙥𝙖𝙨𝙨𝙞𝙤𝙣 !🌻</p>
+    <h1> 𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 𝙨𝙪𝙧 𝙡𝙚 𝙨𝙞𝙩𝙚 𝙙𝙚 𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓 </h1>
+    <p>🌼𝙐𝙣 𝙨𝙞𝙩𝙚 𝙬𝙚𝙗 𝙘𝙧éé 𝙖𝙫𝙚𝙘 𝙥𝙖𝙨𝙨𝙞𝙤𝙣 !🌻</p>
   </header>
   <main>
     <section class="hero">
@@ -21,7 +21,7 @@
     </section>
   </main>
   <footer>
-    <p>© 2025 🌼ᎲᎲᎶᎻᎾᏕᎿᎲᎲ🌼. 𝐓𝐨𝐮𝐬 𝐝𝐫𝐨𝐢𝐭𝐬 𝐫𝐞́𝐬𝐞𝐫𝐯𝐞́𝐬.</p>
+    <p>© 2025 🌼ᎲᎲᎶᎻᎾᏕᎿᎲᎲ🌼. 𝐓𝐨𝐮𝐬 𝐝𝐫𝐨𝐢𝐭𝐬 𝐫é𝐬𝐞𝐫𝐯é𝐬.</p>
   </footer>
 </body>
 </html>
