--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>𝙈𝙤𝙣 𝙥𝙧𝙚𝙢𝙞𝙚𝙧 𝙨𝙞𝙩𝙚 - ☢️𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓☣️</title>
+  <title>Auto-Ghost-Bot</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1> 𝘽𝙞𝙚𝙣𝙫𝙚𝙣𝙪𝙚 𝙨𝙪𝙧 𝙡𝙚 𝙨𝙞𝙩𝙚 𝙙𝙚 𝙓𝙭𝙂𝙝𝙤𝙨𝙩𝙭𝙓 </h1>
-    <p>🌼𝙐𝙣 𝙨𝙞𝙩𝙚 𝙬𝙚𝙗 𝙘𝙧éé 𝙖𝙫𝙚𝙘 𝙥𝙖𝙨𝙨𝙞𝙤𝙣 !🌻</p>
-  </header>
-  <main>
-    <section class="hero">
-      <h2>𝘾𝙤𝙣𝙩𝙖𝙘𝙩𝙚𝙯-𝙢𝙤𝙞 📞:</h2>
-      <div class="contact-box">
-        <a href="mailto:kami.jrka@gmail.com" class="button">Email</a>
-        <a href="https://www.facebook.com/8Xx.GHOST.xX8" class="button" target="_blank">Facebook</a>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <p>© 2025 🌼ᎲᎲᎶᎻᎾᏕᎿᎲᎲ🌼. 𝐓𝐨𝐮𝐬 𝐝𝐫𝐨𝐢𝐭𝐬 𝐫é𝐬𝐞𝐫𝐯é𝐬.</p>
-  </footer>
+  <div class="hero">
+    <div class="content">
+      <h1>Bienvenue sur Auto-Ghost-Bot</h1>
+      <p>Créez votre propre bot Facebook en quelques clics !</p>
+      <button id="createBotBtn">Créer un Bot</button>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
