--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auto-Ghost-Bot</title>
+  <title>Accueil</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
     <div class="content">
       <h1>Bienvenue sur Auto-Ghost-Bot</h1>
-      <p>Créez votre propre bot Facebook en quelques clics !</p>
-      <button id="createBotBtn">Créer un Bot</button>
+      <p>Créez facilement votre bot Facebook !</p>
+      <button onclick="location.href='about.html'">En savoir plus</button>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
