--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil</title>
+  <title>Accueil - Auto-Ghost-Bot</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,14 @@
     <div class="content">
       <h1>Bienvenue sur Auto-Ghost-Bot</h1>
       <p>Créez facilement votre bot Facebook !</p>
-      <button onclick="location.href='about.html'">En savoir plus</button>
+      <button onclick="location.href='create-bot.html'">Créer un Bot</button>
+      <div class="nav-links">
+        <a href="about.html">À propos</a>
+        <a href="contact.html">Contact</a>
+        <a href="features.html">Fonctionnalités</a>
+      </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
