--- a/public/about.html
+++ b/public/about.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À propos</title>
+  <title>À propos - Auto-Ghost-Bot</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="background: linear-gradient(120deg, #004d40, #0000ff);">
+<body>
   <div class="hero">
     <div class="content">
-      <h1>À propos d'Auto-Ghost-Bot</h1>
-      <p>Découvrez notre projet innovant.</p>
-      <button onclick="location.href='index.html'">Retour à l'accueil</button>
+      <h1>À propos de Auto-Ghost-Bot</h1>
+      <p>Auto-Ghost-Bot vous permet de créer facilement un bot Facebook pour automatiser vos interactions !</p>
+      <div class="nav-links">
+        <a href="index.html">Retour à l'accueil</a>
+        <a href="contact.html">Contact</a>
+        <a href="features.html">Fonctionnalités</a>
+      </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
-</html>
+  </html>
