--- a/public/contact.html
+++ b/public/contact.html
@@ -3,16 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>Contact - Auto-Ghost-Bot</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="background: linear-gradient(120deg, #ff8c00, #0000ff);">
+<body>
   <div class="hero">
     <div class="content">
       <h1>Contactez-nous</h1>
-      <p>Vous avez une question ? Nous sommes là !</p>
-      <button onclick="location.href='index.html'">Retour à l'accueil</button>
+      <form id="contactForm">
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="name" required>
+
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="message">Message :</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Envoyer</button>
+      </form>
+      <div class="nav-links">
+        <a href="index.html">Retour à l'accueil</a>
+        <a href="about.html">À propos</a>
+        <a href="features.html">Fonctionnalités</a>
+      </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
-</html>
+  </html>
