--- a/public/features.html
+++ b/public/features.html
@@ -3,16 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fonctionnalités</title>
+  <title>Fonctionnalités - Auto-Ghost-Bot</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body style="background: linear-gradient(120deg, #6a0dad, #0000ff);">
+<body>
   <div class="hero">
     <div class="content">
-      <h1>Fonctionnalités</h1>
-      <p>Découvrez toutes les fonctionnalités incroyables de votre bot.</p>
-      <button onclick="location.href='index.html'">Retour à l'accueil</button>
+      <h1>Fonctionnalités du Bot</h1>
+      <p>Voici quelques fonctionnalités que votre Auto-Ghost-Bot peut avoir :</p>
+      <ul>
+        <li>Connexion via cookie c3c-fbstate</li>
+        <li>Personnalisation des commandes (prefixe, UID, etc.)</li>
+        <li>Commandes avancées (ban, kick, messages de bienvenue, etc.)</li>
+        <li>Réponses intelligentes avec IA</li>
+        <li>Intégration d'APIs pour fonctionnalités supplémentaires</li>
+      </ul>
+      <div class="nav-links">
+        <a href="index.html">Retour à l'accueil</a>
+        <a href="about.html">À propos</a>
+        <a href="contact.html">Contact</a>
+      </div>
     </div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
