--- a/public/index.html
+++ b/public/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Accueil - Auto-Ghost-Bot</title>
+  <title>Accueil - Auto-Ghost-Bot 👻🤖</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
     <div class="content">
-      <h1>Bienvenue sur Auto-Ghost-Bot</h1>
-      <p>Créez facilement votre bot Facebook !</p>
-      <button onclick="location.href='create-bot.html'">Créer un Bot</button>
+      <h1>Bienvenue sur Auto-Ghost-Bot 👻</h1>
+      <p>Créez facilement votre bot Facebook 🤖 !</p>
+      <button onclick="location.href='create-bot.html'">Créer un Bot 🚀</button>
       <div class="nav-links">
-        <a href="about.html">À propos</a>
-        <a href="contact.html">Contact</a>
-        <a href="features.html">Fonctionnalités</a>
+        <a href="about.html">À propos ℹ️</a>
+        <a href="contact.html">Contact 📞</a>
+        <a href="features.html">Fonctionnalités ⚙️</a>
       </div>
     </div>
   </div>
