--- a/public/about.html
+++ b/public/about.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À propos - Auto-Ghost-Bot</title>
+  <title>À propos - Auto-Ghost-Bot 👻</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
     <div class="content">
-      <h1>À propos de Auto-Ghost-Bot</h1>
-      <p>Auto-Ghost-Bot vous permet de créer facilement un bot Facebook pour automatiser vos interactions !</p>
+      <h1>À propos de Auto-Ghost-Bot 🤖👻</h1>
+      <p>Auto-Ghost-Bot est une plateforme permettant de créer facilement des bots Facebook. 🌍</p>
+      <p>Créez, gérez et personnalisez votre bot en quelques étapes simples. 🚀</p>
+
       <div class="nav-links">
-        <a href="index.html">Retour à l'accueil</a>
-        <a href="contact.html">Contact</a>
-        <a href="features.html">Fonctionnalités</a>
+        <a href="index.html">Retour à l'accueil 🏠</a>
       </div>
     </div>
   </div>
   <script src="script.js"></script>
 </body>
-  </html>
+</html>
