--- a/public/features.html
+++ b/public/features.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fonctionnalités - Auto-Ghost-Bot</title>
+  <title>Fonctionnalités - Auto-Ghost-Bot ⚙️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
     <div class="content">
-      <h1>Fonctionnalités du Bot</h1>
-      <p>Voici quelques fonctionnalités que votre Auto-Ghost-Bot peut avoir :</p>
+      <h1>Fonctionnalités du Bot ⚙️</h1>
       <ul>
-        <li>Connexion via cookie c3c-fbstate</li>
-        <li>Personnalisation des commandes (prefixe, UID, etc.)</li>
-        <li>Commandes avancées (ban, kick, messages de bienvenue, etc.)</li>
-        <li>Réponses intelligentes avec IA</li>
-        <li>Intégration d'APIs pour fonctionnalités supplémentaires</li>
+        <li>Création facile de bots Facebook 🤖</li>
+        <li>Gestion des commandes et événements 🔧</li>
+        <li>Personnalisation du bot selon vos besoins 🎨</li>
+        <li>Réponses automatiques et gestion des messages 📩</li>
       </ul>
+
       <div class="nav-links">
-        <a href="index.html">Retour à l'accueil</a>
-        <a href="about.html">À propos</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html">Retour à l'accueil 🏠</a>
       </div>
     </div>
   </div>
