--- a/public/create-bot.html
+++ b/public/create-bot.html
@@ -3,32 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Créer un Bot - Auto-Ghost-Bot</title>
+  <title>Créer un Bot - Auto-Ghost-Bot 👻</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="hero">
     <div class="content">
-      <h1>Créer votre Bot Facebook</h1>
-      <p>Suivez les étapes pour créer votre propre bot Facebook personnalisé.</p>
+      <h1>Créer un Bot Facebook 🤖</h1>
+      <p>Suivez les étapes pour créer votre bot personnalisé 📜</p>
 
-      <form id="botCreationForm">
-        <label for="botName">Nom du Bot :</label>
-        <input type="text" id="botName" name="botName" required>
+      <form action="/create-bot" method="POST">
+        <label for="bot-name">Nom du Bot 📝:</label>
+        <input type="text" id="bot-name" name="bot-name" required placeholder="Nom du Bot">
 
-        <label for="botPrefix">Préfixe des commandes :</label>
-        <input type="text" id="botPrefix" name="botPrefix" required>
+        <label for="bot-description">Description du Bot 💬:</label>
+        <textarea id="bot-description" name="bot-description" required placeholder="Décrivez votre Bot ici..."></textarea>
 
-        <label for="botUID">UID du Bot :</label>
-        <input type="text" id="botUID" name="botUID" required>
-
-        <button type="submit">Créer le Bot</button>
+        <button type="submit">Créer le Bot 🚀</button>
       </form>
 
       <div class="nav-links">
-        <a href="index.html">Retour à l'accueil</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">À propos</a>
+        <a href="index.html">Retour à l'accueil 🏠</a>
       </div>
     </div>
   </div>
