--- a/public/contact.html
+++ b/public/contact.html
@@ -10,21 +10,14 @@
   <div class="hero">
     <div class="content">
       <h1>Contactez XxGhostxX via Facebook 📞</h1>
-      <p>Si vous avez des questions ou des commentaires, connectez-vous avec votre compte Facebook pour communiquer directement avec XxGhostxX ! 📧</p>
+      <p>Si vous avez des questions ou des commentaires, contactez XxGhostxX directement sur Facebook ! 📧</p>
 
-      <!-- Formulaire de connexion Facebook pour contact -->
-      <form action="/login-facebook" method="POST">
-        <label for="email">Email Facebook 📧:</label>
-        <input type="email" id="email" name="email" required placeholder="Votre email Facebook">
-
-        <label for="password">Mot de passe Facebook 🔑:</label>
-        <input type="password" id="password" name="password" required placeholder="Votre mot de passe Facebook">
-
-        <button type="submit">Se connecter avec Facebook 🧑‍💻</button>
-      </form>
+      <!-- Lien vers Messenger pour contacter directement XxGhostxX -->
+      <a href="https://m.me/8Xx.GHOST.xX8" target="_blank">
+        <button class="contact-btn">Contactez-nous sur Facebook 📱</button>
+      </a>
 
       <div class="contact-info">
-        <p>Une fois connecté, vous pourrez envoyer un message directement à XxGhostxX ! 🤖</p>
         <p>Vous pouvez également visiter son profil Facebook ici : <a href="https://www.facebook.com/8Xx.GHOST.xX8" target="_blank"> XxGhostxX sur Facebook</a> 📱</p>
       </div>
 
